fixed text align

--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@ body
 	font: 20px Montserrat, sans-serif;
   line-height: 1.8;
   color: black;
-  text-align: center;
 }
 
 p 
